--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.10",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^8.4.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -30,6 +31,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "ts-loader": "^5.3.1",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   },
